# listify-backend

./: .ordeal  README.md  listify-backend.cabal
src/: Database.hs  Lib.hs  lib.hs.old
src/Models/: Item.hs  List.hs  Models.hs
